# myportfolio-saisanjay

./: .replit  README.md  app.py  pyproject.toml
static/css/: style.css
templates/: about.html  base.html  contact.html  home.html  projects.html  resume.html
